Ajout des Formulaire

--- a/src/views/tmpl/alias.html
+++ b/src/views/tmpl/alias.html
@@ -2,6 +2,7 @@
 
 {% block title %}Alias page{% endblock %}
 {% block breadcrumb %}Alias{% endblock %}
+{% block navlinkactive %}active{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="css/default.css">
 {% endblock %}
@@ -30,4 +31,10 @@
     </tbody>
 </table>
 
+<a href="/formAlias" class="btn btn-primary btn-lg">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+  </svg>
+  Ajouter Alias
+</a>
 {% endblock %}
