--- a/src/views/tmpl/nat.html
+++ b/src/views/tmpl/nat.html
@@ -1,7 +1,8 @@
 {% extends 'tmpl/layout.html' %}
 
-{% block title %}Client{% endblock %}
-{% block breadcrumb %}Client{% endblock %}
+{% block title %}Nat page{% endblock %}
+{% block breadcrumb %}Nat{% endblock %}
+{% block navlinkactive %}active{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="css/default.css">
 {% endblock %}
@@ -35,4 +36,11 @@
 {% endfor %}
     </tbody>
 </table>
+
+<a href="/formNat" class="btn btn-primary btn-lg">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+    </svg>
+    Ajouter Règle Nat
+</a>
 {% endblock %}
