--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a class="nav-link {% if navlinkactive %}active{% endif %}" href="/filter">Règles Filtrage</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link {% if navlinkactive %}active{% endif %}" href="/contact">Contact</a>
+            </li>
           </ul>
         </div>
 
