update header and footer

--- a/src/views/tmpl/alias.html
+++ b/src/views/tmpl/alias.html
@@ -2,7 +2,7 @@
 
 {% block title %}Alias page{% endblock %}
 {% block breadcrumb %}Alias{% endblock %}
-{% block navlinkactive %}active{% endblock %}
+{% block navactivealias %}active{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="css/default.css">
 {% endblock %}
