--- a/src/views/tmpl/rules_filter.html
+++ b/src/views/tmpl/rules_filter.html
@@ -2,7 +2,7 @@
 
 {% block title %}Filter page{% endblock %}
 {% block breadcrumb %}Filter{% endblock %}
-{% block navlinkactive %}active{% endblock %}
+{% block navactivefilter %}active{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="css/default.css">
 {% endblock %}
