--- a/src/views/tmpl/contact.html
+++ b/src/views/tmpl/contact.html
@@ -2,7 +2,7 @@
 
 {% block title %}Contact page{% endblock %}
 {% block breadcrumb %}Contact{% endblock %}
-{% block navlinkactive %}active{% endblock %}
+{% block navactivecontact %}active{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="css/default.css">
 {% endblock %}
@@ -10,7 +10,6 @@
 {% endblock %}
 
 {% block content %}
-<h2>Contact</h2>
 
 <div class="container">
 
