--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -20,40 +20,23 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">IPTABLES</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Informations système</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if navlinkactive %}{% endif %}" href="/alias">Alias</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if navlinkactive %}active{% endif %}" href="/nat">Règles NAT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if navlinkactive %}active{% endif %}" href="/filter">Règles Filtrage</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if navlinkactive %}active{% endif %}" href="/contact">Contact</a>
-            </li>
-          </ul>
-        </div>
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+        <span class="fs-4">Voyage</span>
+      </a>
 
-        <ul class="nav justify-content-end">
-          <li class="logo nav-item"><img src="images/iptables.jpg" /></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="index.html" class="nav-link {% block navactivehome %}{% endblock %}" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="/alias" class="nav-link {% block navactivealias %}{% endblock %}">Alias</a></li>
+        <li class="nav-item"><a href="/nat" class="nav-link {% block navactivenat %}{% endblock %}">Règles NAT</a></li>
+        <li class="nav-item"><a href="/filter" class="nav-link {% block navactivefilter %}{% endblock %}">Règles Filtrage</a></li>
+        <li class="nav-item"><a href="/contact" class="nav-link {% block navactivecontact %}{% endblock %}">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </ul>
+    </header>
+  </div>
 
   <section>
   <div class="container">
@@ -70,13 +53,52 @@
   <div class="container">
       {% block content %}{% endblock %}
     </section>
-    <footer>
-      <nav class="navbar fixed-bottom navbar-light bg-light">
-        <div class="container-fluid">
-          Copyright Univ-Savoie
+    
+    <div class="container">
+      <footer class="row row-cols-5 py-5 my-5 border-top">
+        <div class="col">
+          <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+          </a>
+          <p class="text-muted">Copyright Univ-Savoie &copy; Ravit et Shritliffe 2022</p>
         </div>
-      </nav>
-    </footer>
+    
+        <div class="col">
+    
+        </div>
+    
+        <div class="col">
+          <h5>Echange</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+          </ul>
+        </div>
+    
+        <div class="col">
+          <h5>Articles</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tous les articles</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+          </ul>
+        </div>
+    
+        <div class="col">
+          <h5>Ressources</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Rejoindre la newsletter</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Mentions légales & CGU</a></li>
+            <li class="nav-item mb-2"><a href="/contact" class="nav-link p-0 text-muted">Contact</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
     </body>
   </html>
   
