--- a/src/views/tmpl/nat.html
+++ b/src/views/tmpl/nat.html
@@ -2,7 +2,7 @@
 
 {% block title %}Nat page{% endblock %}
 {% block breadcrumb %}Nat{% endblock %}
-{% block navlinkactive %}active{% endblock %}
+{% block navactivenat %}active{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="css/default.css">
 {% endblock %}
