--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -38,7 +38,7 @@
     </header>
   </div>
 
-  <section>
+  <main class="container">
   <div class="container">
     <div class="row">
       <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
@@ -52,7 +52,7 @@
   </div>
   <div class="container">
       {% block content %}{% endblock %}
-    </section>
+  </main>
     
     <div class="container">
       <footer class="row row-cols-5 py-5 my-5 border-top">
