--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -68,13 +68,13 @@
         </div>
     
         <div class="col">
-          <h5>Echange</h5>
+          <h5>Tous les Sites</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
+            <li class="nav-item mb-2"><a href="/alias" class="nav-link p-0 text-muted">Alias</a></li>
+            <li class="nav-item mb-2"><a href="/nat" class="nav-link p-0 text-muted">Règles NAT</a></li>
+            <li class="nav-item mb-2"><a href="/filter" class="nav-link p-0 text-muted">Règles Filtage</a></li>
+            <li class="nav-item mb-2"><a href="/contact" class="nav-link p-0 text-muted">Contact</a></li>
           </ul>
         </div>
     
