--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -29,7 +29,7 @@
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link {% block navactivehome %}{% endblock %}" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="/alias" class="nav-link {% block navactivealias %}{% endblock %}">Alias</a></li>
+        <li class="nav-item"><a href="/localisation" class="nav-link {% block navactivelocalisation %}{% endblock %}">Localisation</a></li>
         <li class="nav-item"><a href="/nat" class="nav-link {% block navactivenat %}{% endblock %}">Règles NAT</a></li>
         <li class="nav-item"><a href="/filter" class="nav-link {% block navactivefilter %}{% endblock %}">Règles Filtrage</a></li>
         <li class="nav-item"><a href="/contact" class="nav-link {% block navactivecontact %}{% endblock %}">Contact</a></li>
@@ -71,6 +71,7 @@
           <h5>Tous les Sites</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
+            <li class="nav-item mb-2"><a href="/localisation" class="nav-link p-0 text-muted">Localisation</a></li>
             <li class="nav-item mb-2"><a href="/alias" class="nav-link p-0 text-muted">Alias</a></li>
             <li class="nav-item mb-2"><a href="/nat" class="nav-link p-0 text-muted">Règles NAT</a></li>
             <li class="nav-item mb-2"><a href="/filter" class="nav-link p-0 text-muted">Règles Filtage</a></li>
