--- a/src/views/tmpl/index.html
+++ b/src/views/tmpl/index.html
@@ -19,14 +19,13 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">Voyage</span>
+        <span class="fs-4">Easytravel</span>
       </a>
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="/alias" class="nav-link">Alias</a></li>
-        <li class="nav-item"><a href="/nat" class="nav-link">Règles NAT</a></li>
-        <li class="nav-item"><a href="/filter" class="nav-link">Règles Filtrage</a></li>
+        <li class="nav-item"><a href="/localisation" class="nav-link">Localisation</a></li>
+        <li class="nav-item"><a href="/voyage" class="nav-link">Voyage</a></li>
         <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
@@ -106,6 +105,8 @@
     <h5>Tous les Sites</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
+            <li class="nav-item mb-2"><a href="/localisation" class="nav-link p-0 text-muted">Localisation</a></li>
+            <li class="nav-item mb-2"><a href="/voyage" class="nav-link p-0 text-muted">Voyage</a></li>
             <li class="nav-item mb-2"><a href="/alias" class="nav-link p-0 text-muted">Alias</a></li>
             <li class="nav-item mb-2"><a href="/nat" class="nav-link p-0 text-muted">Règles NAT</a></li>
             <li class="nav-item mb-2"><a href="/filter" class="nav-link p-0 text-muted">Règles Filtage</a></li>
