--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -24,17 +24,17 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">Voyage</span>
+        <span class="fs-4">Easytravel</span>
       </a>
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link {% block navactivehome %}{% endblock %}" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="/localisation" class="nav-link {% block navactivelocalisation %}{% endblock %}">Localisation</a></li>
-        <li class="nav-item"><a href="/nat" class="nav-link {% block navactivenat %}{% endblock %}">Règles NAT</a></li>
-        <li class="nav-item"><a href="/filter" class="nav-link {% block navactivefilter %}{% endblock %}">Règles Filtrage</a></li>
+        <li class="nav-item"><a href="/voyage" class="nav-link {% block navactivevoyage %}{% endblock %}">Voyage</a></li>
         <li class="nav-item"><a href="/contact" class="nav-link {% block navactivecontact %}{% endblock %}">Contact</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
+      
     </header>
   </div>
 
@@ -72,6 +72,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
             <li class="nav-item mb-2"><a href="/localisation" class="nav-link p-0 text-muted">Localisation</a></li>
+            <li class="nav-item mb-2"><a href="/voyage" class="nav-link p-0 text-muted">Voyage</a></li>
             <li class="nav-item mb-2"><a href="/alias" class="nav-link p-0 text-muted">Alias</a></li>
             <li class="nav-item mb-2"><a href="/nat" class="nav-link p-0 text-muted">Règles NAT</a></li>
             <li class="nav-item mb-2"><a href="/filter" class="nav-link p-0 text-muted">Règles Filtage</a></li>
@@ -96,6 +97,7 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Rejoindre la newsletter</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Mentions légales & CGU</a></li>
             <li class="nav-item mb-2"><a href="/contact" class="nav-link p-0 text-muted">Contact</a></li>
+            <li class="nav-item mb-2"><a href="free.html" class="nav-link p-0 text-muted">Voyage Gratuit</a></li>
           </ul>
         </div>
       </footer>
