--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -23,8 +23,8 @@
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">Easytravel</span>
+        <img src="images/logo_small.png" alt="" height="50">
+        <!--<span class="fs-4">Easytravel</span>-->
       </a>
 
       <ul class="nav nav-pills">
