--- a/src/views/tmpl/contact.html
+++ b/src/views/tmpl/contact.html
@@ -20,10 +20,10 @@
     <div class="row mb-2">
       <div class="col-md-6">
 
-        <form class="row g-3">
+        <form class="row g-3" action="" method="POST">
           <div class="col-12">
             <label class="form-label">Objet de votre demande</label>
-            <select class="form-select">
+            <select class="form-select" name="objetcontact">
               <option>Demande de service</option>
               <option>Je rencontre un problème technique sur le site</option>
               <option>Autre demande</option>
@@ -31,15 +31,15 @@
           </div>
           <div class="col-md-6">
             <label class="form-label">Votre nom</label>
-            <input type="text" class="form-control" placeholder="Nom">
+            <input type="text" class="form-control" placeholder="Nom" name="nomcontact">
           </div>
           <div class="col-md-6">
             <label class="form-label">Votre adresse email</label>
-            <input type="text" class="form-control" placeholder="Email">
+            <input type="text" class="form-control" placeholder="Email" name="mailcontact">
           </div>
           <div class="col-12">
             <label class="form-label">Message</label>
-            <textarea class="form-control" rows="5">Entrez votre message ici...</textarea>
+            <textarea class="form-control" rows="5" name="mescontact">Entrez votre message ici...</textarea>
           </div>
           <div class="col-12">
             <button type="submit" class="btn btn-primary">Envoyer</button>
