test method post por contact

--- a/src/views/tmpl/index.html
+++ b/src/views/tmpl/index.html
@@ -18,8 +18,7 @@
 	<div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">Easytravel</span>
+        <img src="images/logo_small.png" alt="" height="50">
       </a>
 
       <ul class="nav nav-pills">
@@ -131,6 +130,7 @@
       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Rejoindre la newsletter</a></li>
       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Mentions légales & CGU</a></li>
       <li class="nav-item mb-2"><a href="/contact" class="nav-link p-0 text-muted">Contact</a></li>
+      <li class="nav-item mb-2"><a href="free.html" class="nav-link p-0 text-muted">Voyage Gratuit</a></li>
     </ul>
   </div>
 </footer>
