--- a/src/views/tmpl/contact.html
+++ b/src/views/tmpl/contact.html
@@ -23,7 +23,7 @@
         <form class="row g-3" action="" method="POST">
           <div class="col-12">
             <label class="form-label">Objet de votre demande</label>
-            <select class="form-select" name="objetcontact">
+            <select class="form-select" name="sujetcontact">
               <option>Demande de service</option>
               <option>Je rencontre un problème technique sur le site</option>
               <option>Autre demande</option>
@@ -53,4 +53,25 @@
     </div>
 
 </div>
+
+<table id="myTab" class="table table-striped">
+  <thead>
+    <tr>
+      <th>Nom</th>
+      <th>mail</th>
+      <th>objet</th>
+      <th>message</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for row in items %}
+      <tr>
+          <td>{{ row.nomcontact }}</td>
+          <td>{{ row.mailcontact }}</td>
+          <td>{{ row.sujetcontact }}</td>
+          <td>{{ row.mescontact }}</td>
+      </tr>
+  {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
