--- a/src/views/tmpl/contact.html
+++ b/src/views/tmpl/contact.html
@@ -20,7 +20,7 @@
     <div class="row mb-2">
       <div class="col-md-6">
 
-        <form class="row g-3" action="" method="POST">
+        <form class="row g-3" action="/contact" method="POST">
           <div class="col-12">
             <label class="form-label">Objet de votre demande</label>
             <select class="form-select" name="sujetcontact">
