--- a/src/views/tmpl/localisation.html
+++ b/src/views/tmpl/localisation.html
@@ -15,7 +15,7 @@
 {% for row in items %}
 <div class="row mb-2 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
     <div class="col-md-4">
-        <img class="card-img-top" src="#" alt="Card image cap">
+        <img class="card-img-top" src="images/{{ row.loc_img }}" alt="Card image cap">
     </div>
     <div class="col-md-8">
         <div class="mb-0">
