--- a/src/views/tmpl/contact.html
+++ b/src/views/tmpl/contact.html
@@ -31,11 +31,11 @@
           </div>
           <div class="col-md-6">
             <label class="form-label">Votre nom</label>
-            <input type="text" class="form-control" placeholder="Nom" name="nomcontact">
+            <input type="text" class="form-control" placeholder="Nom" name="nomcontact" required>
           </div>
           <div class="col-md-6">
             <label class="form-label">Votre adresse email</label>
-            <input type="text" class="form-control" placeholder="Email" name="mailcontact">
+            <input type="text" class="form-control" placeholder="Email" name="mailcontact" required>
           </div>
           <div class="col-12">
             <label class="form-label">Message</label>
