--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -30,8 +30,9 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link {% block navactivehome %}{% endblock %}" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="/localisation" class="nav-link {% block navactivelocalisation %}{% endblock %}">Localisation</a></li>
+        <li class="nav-item"><a href="/voyage" class="nav-link {% block navactivevoyage %}{% endblock %}">Voyage</a></li>
         <li class="nav-item dropdown">
-          <a href="/voyage" class="nav-link dropdown-toggle {% block navactivevoyage %}{% endblock %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a href="/voyage" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Voyage
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
