--- a/src/views/tmpl/about.html
+++ b/src/views/tmpl/about.html
@@ -11,9 +11,14 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-12">Page</div>
-    <div class="col-6">Nicolas</div>
-    <div class="col-6">Damien</div>
+    <div class="col-12">
+        <div  class="card m-2 p-2">
+            <h4 class="fst-italic">About</h4>
+            <p class="mb-0">C'est un site de réservation de voyage du TP web sujet numero 2. Il a été crée par Ravit Nicolas et Shirtliffe Damien, tous deux étudiant en licence 3 Télécommunication et Réseaux Informatique au Bourget-du-Lac.</p>
+        </div>
+    </div>
+    <div class="col-6"><div class="card m-2 p-2">Nicolas</div></div>
+    <div class="col-6"><div class="card m-2 p-2">Damien</div></div>
 </div>
 
 
