--- a/src/views/tmpl/layout.html
+++ b/src/views/tmpl/layout.html
@@ -28,7 +28,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link {% block navactivehome %}{% endblock %}" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="/home" class="nav-link {% block navactivehome %}{% endblock %}" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="/localisation" class="nav-link {% block navactivelocalisation %}{% endblock %}">Localisation</a></li>
         <li class="nav-item"><a href="/voyage" class="nav-link {% block navactivevoyage %}{% endblock %}">Voyage</a></li>
         <!--
@@ -62,36 +62,23 @@
           <p class="text-muted">Copyright Univ-Savoie &copy; Ravit et Shritliffe 2022</p>
         </div>
     
-        <div class="col">
-    
-        </div>
+        <div class="col"></div>
+        <div class="col"></div>
     
         <div class="col">
           <h5>Tous les Sites</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
+            <li class="nav-item mb-2"><a href="/home" class="nav-link p-0 text-muted">Home</a></li>
             <li class="nav-item mb-2"><a href="/localisation" class="nav-link p-0 text-muted">Localisation</a></li>
             <li class="nav-item mb-2"><a href="/voyage" class="nav-link p-0 text-muted">Voyage</a></li>
             <li class="nav-item mb-2"><a href="/contact" class="nav-link p-0 text-muted">Contact</a></li>
-          </ul>
-        </div>
-    
-        <div class="col">
-          <h5>Articles</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tous les articles</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            <li class="nav-item mb-2"><a href="/about" class="nav-link p-0 text-muted">About</a></li>
           </ul>
         </div>
     
         <div class="col">
           <h5>Ressources</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Rejoindre la newsletter</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Mentions légales & CGU</a></li>
             <li class="nav-item mb-2"><a href="/contact" class="nav-link p-0 text-muted">Contact</a></li>
             <li class="nav-item mb-2"><a href="free.html" class="nav-link p-0 text-muted">Voyage Gratuit</a></li>
           </ul>
