--- a/src/views/tmpl/localisation.html
+++ b/src/views/tmpl/localisation.html
@@ -15,8 +15,8 @@
     <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
         {% for row in items %}
         <div class="col mb-3">
-                <a href="/ville?v={{ row.villeloc }}" style="text-decoration: none;">
-                    <div class="card" style="height: 20rem;">
+                <a href="/ville?v={{ row.villeloc }}" class="text-dark">
+                    <div class="card" style="height: 18rem;">
                         <img src="images/ville/{{ row.villeloc }}.jpg" class="card-img-top invisible-sm" alt="..." height="200">
                         <div class="card-body">
                             <div class="">
@@ -27,9 +27,6 @@
                             </div>
                             <div class="">
                                 {{ row.paysloc }}
-                            </div>
-                            <div class="">
-                                +{{ row.idpaysloc }}
                             </div>
                         </div>
                     </div>
@@ -45,7 +42,7 @@
         {% for row in items %}
         {% if row.idpaysloc == 33 %}
         <div class="col mb-2">
-            <a href="/ville?v={{ row.villeloc }}" style="text-decoration: none;">
+            <a href="/ville?v={{ row.villeloc }}" class="text-dark">
             <div class="card" style="height: 16rem;">
                 <img src="images/ville/{{ row.villeloc }}.jpg" class="card-img-top invisible-sm" alt="..." height="180">
                 <div class="card-body">
